cabal-version:       >=1.10
name:                meu-projeto
version:             0.1.0.0
build-type:          Simple

executable meu-projeto
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.14 && <4.16
                     , scotty >= 0.12
                     , text
                     , warp
  default-language:    Haskell2010
